--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,13 +3,13 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{myPaper,
+  abbr={JoCN},
+  bibtex_show={false},
+  title={Correlations between visual temporal resolution and individual alpha peak frequency: Evidence that internal and measurement noise drive null findings},
+  author={Deodato, M. and Melcher D.},
+  journal={Journal of Cognitive Neuroscience},
+  year={2023}
 }
 
 @article{einstein1950meaning,
