--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,9 +3,8 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{myPaper,
-  abbr={JoCN},
-  bibtex_show={false},
+@article{deodato2023jocn,
+  bibtex_show={true},
   title={Correlations between visual temporal resolution and individual alpha peak frequency: Evidence that internal and measurement noise drive null findings},
   author={Deodato, M. and Melcher D.},
   journal={Journal of Cognitive Neuroscience},
