--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,13 @@
 
 @string{aps = {American Physical Society,}}
 
-
+@article{deodato2023jocn,
+  bibtex_show={true},
+  title={Correlations between visual temporal resolution},
+  author={Deodato, M. and Melcher D.},
+  journal={Journal of Cognitive Neuroscience},
+  year={2023}
+}
 
 @article{einstein1950meaning,
   abbr={AJP},
@@ -65,13 +71,4 @@
   title={On the electrodynamics of moving bodies},
   author={Einstein, A.},
   year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
 }
