--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,26 +5,29 @@
 
 @article{deodato2023jocn,
   bibtex_show={true},
-  title={Correlations between visual temporal resolution},
-  author={Deodato, M. and Melcher D.},
+  title={Correlations between visual temporal resolution and individual alpha peak frequency: Evidence that internal and measurement noise drive null findings},
+  author={Deodato, M. and Melcher, D.},
   journal={Journal of Cognitive Neuroscience},
   year={2023}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{deodato2022jov,
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  title={The effect of perceptual history on the interpretation of causality},
+  author={Deodato, M. and Melcher, D.},
+  journal={Journal of Vision},
+  year={2022}
 }
 
-@article{PhysRev.47.777,
+@article{deodato2023sr,
+  bibtex_show={true},
+  title={Bilateral increase in MEG planar gradients prior to saccade onset},
+  author={Fabius, JH and Fracasso, A and Deodato, M and Melcher, D and Van der Stigchel, D},
+  journal={Scientific Reports},
+  year={2023}
+}
+
+article{PhysRev.47.777,
   abbr={PhysRev},
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
   author={Einstein, A. and Podolsky, B. and Rosen, N.},
@@ -44,31 +47,4 @@
   altmetric={248277},
   dimensions={true},
   selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
 }
