--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,7 @@
   year={2023}
 }
 
-@article{PhysRev.47.777,
+article{PhysRev.47.777,
   abbr={PhysRev},
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
   author={Einstein, A. and Podolsky, B. and Rosen, N.},
