--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,14 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{deodato2023biorkiv,
+  bibtex_show={true},
+  title={Aperiodic EEG predicts variability of visual tem- poral processing.},
+  author={Deodato, M. and Melcher, D.},
+  journal={biorkiv},
+  year={2023}
+}
+
 @article{deodato2023jocn,
   bibtex_show={true},
   title={Correlations between visual temporal resolution and individual alpha peak frequency: Evidence that internal and measurement noise drive null findings},
