--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 
 @article{deodato2023biorkiv,
   bibtex_show={true},
-  title={Aperiodic EEG predicts variability of visual tem- poral processing.},
+  title={Aperiodic EEG predicts variability of visual temporal processing.},
   author={Deodato, M. and Melcher, D.},
   journal={biorkiv},
   year={2023}
