--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,14 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{deodato2024scan,
+  bibtex_show={true},
+  title={Combined effects of neuroticism and negative emotional context on spontaneous EEG dynamics.},
+  author={Deodato, M. and Seeber, M. and Mammeri, K. and Michel, C. and Vuilleumier, P.},
+  journal={Social Cognitive Affective Neuroscience},
+  year={2024}
+}
+
 @article{deodato2023biorkiv,
   bibtex_show={true},
   title={Aperiodic EEG predicts variability of visual temporal processing.},
