--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,14 @@
   year={2023}
 }
 
+@article{deodato2023biorkiv,
+  bibtex_show={true},
+  title={Aperiodic EEG predicts variability of visual temporal processing.},
+  author={Deodato, M. and Melcher, D.},
+  journal={biorkiv},
+  year={2023}
+}
+
 @article{deodato2023jocn,
   bibtex_show={true},
   title={Correlations between visual temporal resolution and individual alpha peak frequency: Evidence that internal and measurement noise drive null findings},
